# BARMapEditor

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  README.md  SRS.md  rust-toolchain.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
assets/: mapfeatures_catalog.json
assets/fixtures/: README.md
assets/parity-fixtures/coastlines/: README.md
assets/parity-fixtures/comet/: README.md
assets/parity-fixtures/feature-zoo/: README.md
assets/parity-fixtures/foggy-map/: README.md
assets/parity-fixtures/gecko/: README.md
assets/parity-fixtures/grass-field/: README.md
assets/parity-fixtures/lava-emission/: README.md
assets/parity-fixtures/lava-sample/: README.md
assets/parity-fixtures/shadow-test/: README.md
assets/parity-fixtures/sunset/: README.md
assets/parity-fixtures/wet-rocks/: README.md
crates/barme-app/: Cargo.toml
crates/barme-app/examples/: bake_layered_smoke.rs
crates/barme-app/src/: build_runner.rs  composite.wgsl  config.rs  feature_decals.rs  grass.rs  grass.wgsl  launcher.rs  lines.wgsl  main.rs  markers.wgsl  parity_fixtures.rs  render.rs  shadow_gen.wgsl  terrain.wgsl  water.wgsl
crates/barme-app/src/ui/: build_log.rs  build_overlay.rs  cheat_sheet.rs  command_palette.rs  confirm.rs  gizmo.rs  help_center.rs  help_text.rs  icons.rs  inspector_mapinfo.rs  intro.rs  layers_panel.rs  lint_panel.rs  markers.rs  minimap.rs  mod.rs  next_steps.rs  overlay.rs  paint_view.rs  save_before_build.rs  theme.rs  toast.rs  tool_intro.rs  tour.rs  viewport_chrome.rs  widgets.rs
crates/barme-app/src/ui/help_content/: ally_teams.md  build_pipeline.md  getting_started.md  layered_painter.md  pitfall_01_texture_pipeline_memory.md  pitfall_02_dxt1_slow_lossy.md  pitfall_03_smt_dedup.md  pitfall_04_heightmap_dims.md  pitfall_06_mapinfo_silent_deps.md  pitfall_07_pink_map_rename.md  pitfall_08_dnts_water_los.md  pitfall_09_sd7_solidity.md  pitfall_11_sundir_case.md  pitfall_13_metalmap_zero.md  pitfall_14_geo_vents_springboard.md  pitfall_15_splat_subtable_form.md  pitfall_18_sundir_w.md  pitfall_22_max_metal_scale.md  pitfall_25_luagaia_bootstrap.md  pitfall_26_startboxes.md  pitfall_28_water_plane_consteval.md  shortcuts.md  tool_feature.md  tool_geo_features.md  tool_metal_spots.md  tool_paint_layer.md  tool_procgen.md  tool_sculpt.md  tool_select.md  tool_start_positions.md  tool_water.md  water_and_lava.md  whats_new.md
crates/barme-app/tests/: inspector_section_pattern.rs
crates/barme-core/: Cargo.toml
crates/barme-core/benches/: brush_latency.rs  procgen_apply.rs
crates/barme-core/examples/: bench_brushes.rs  bench_procgen.rs  gen_fixture.rs
crates/barme-core/src/: grass.rs  heightmap.rs  layers.rs  lib.rs  map_size.rs  mapinfo_schema.rs  procgen.rs  project.rs  rss.rs  splat.rs  start_pos.rs  symmetry.rs  undo.rs  water_presets.rs
crates/barme-core/src/brushes/: lower.rs  mod.rs  raise.rs  smooth.rs
crates/barme-core/src/layers/: brushes.rs  mask.rs  mod.rs
crates/barme-pipeline/: Cargo.toml
crates/barme-pipeline/examples/: build_smoke.rs
crates/barme-pipeline/src/: build.rs  dnts.rs  featureplacer.rs  lib.rs  lint.rs  lua_ast.rs  mapinfo.rs  metal_layout.rs  minimap.rs  pymapconv.rs  sd7.rs  splat_pipeline.rs  startboxes.rs
crates/barme-pipeline/src/lint/: rules.rs
crates/barme-pipeline/tests/: build_sd7.rs  compile_smf.rs  sd7_determinism.rs
crates/barme-render-s3o/: Cargo.toml
crates/barme-render-s3o/src/: cache.rs  lib.rs  parser.rs  thumbnail.rs
docs/: ARCHITECTURE.md  DECISIONS.md  PITFALLS.md  ROADMAP.md  RUNTIME-WARNINGS.md
docs/prompts/: README.md  sprint-1-bug-triage.md  sprint-10-mapinfo-audit-fix.md  sprint-11-metal-and-geo.md  sprint-12-features-and-splat-emission.md  sprint-12-hotfix-overlay-depth-and-line-buffer.md  sprint-13-hotfix-line-buffer-and-marker-occlusion.md  sprint-13-renderer-depth-rework.md  sprint-14-water-and-lava.md  sprint-15-layered-painter-data-model.md  sprint-16-layered-painter-paint-and-composite.md  sprint-17-layered-painter-ui-and-bake.md  sprint-18-minimap-and-form-editor.md  sprint-19-tooltip-and-help-text-pass.md  sprint-2-layout-shell.md  sprint-20-async-build-and-log.md  sprint-21-lint-pass.md  sprint-22-onboarding-and-command-palette.md  sprint-23-painter-cleanup-and-oom.md  sprint-24-multithreading-procgen-dnts.md  sprint-25-terrain-shader-parity.md  sprint-26-water-polish.md  sprint-27-inspector-consistency-refactor.md  sprint-28-atmosphere-and-fog.md  sprint-29-feature-asset-decoding.md  sprint-3-canvas-and-symmetry.md  sprint-30-directional-shadows.md  sprint-31-toasts-and-confirmation-modals.md  sprint-32-launch-in-bar-and-autosave.md  sprint-33-nfr-ci-gates.md  sprint-34-grass-rendering.md  sprint-35-emission-skybox-parallax.md  sprint-36-parity-validation.md  sprint-37-brushes-and-symmetry-line.md  sprint-38-mapfeatures-autogen-and-extra-lints.md  sprint-39-user-asset-library.md  sprint-4-undo-and-mapinfo-schema.md  sprint-40-sd7-import.md  sprint-41-procgen-v2-fbm-and-river-carve.md  sprint-42-typemap-editor.md  (+8 more)
docs/research/: README.md
docs/research/mapinfo/: FINDINGS.md  NOTES.md  PROMPT.md  claude-research-findings.md  gemini-bar-map-metadata-research-findings.md
docs/research/multithreading/: PROPOSAL.md
docs/research/renderer-bar-parity/: ROADMAP.md
docs/research/source-audit-2026-05-18/: FINDINGS.md
docs/research/splat-rendering/: FINDINGS.md  Gemini Terrain Shader Composite Research.md  NOTES.md  PROMPT.md  claude findings.md
docs/research/textures/: FINDINGS.md  Gemini BAR Editor Texture Pack Scoping.md  NOTES.md  PROMPT.md  claude-findings-from-research.md
docs/research/ui/: FINDINGS.md  Gemini UX Redesign for BAR Map Editor.md  NOTES.md  PROMPT.md  claude-research-findings.md
scripts/: build-appimage.sh  dev.sh  fetch-compressonator.sh  fetch-feature-decals.sh  fetch-feature-s3o.sh  fetch-pymapconv.sh  fetch-textures.sh
