[workspace]
resolver = "3"
members = [
    "crates/barme-app",
    "crates/barme-core",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.90"
license = "GPL-2.0-or-later"
repository = "https://github.com/teague/BARMapEditor"

[workspace.dependencies]
# UI / graphics
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }
egui = "0.33"
wgpu = "27"
bytemuck = { version = "1.24", features = ["derive"] }
glam = { version = "0.30", features = ["bytemuck"] }

# Logging / errors
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization / files
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
image = { version = "0.25", default-features = false, features = ["png"] }

# Workspace-internal
barme-core = { path = "crates/barme-core" }

[profile.dev]
opt-level = 1            # debug builds are too slow with image/wgpu at opt-level 0

[profile.dev.package."*"]
opt-level = 3            # always optimise deps so iteration is fast

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
