[workspace]
resolver = "3"
members = [
    "crates/barme-app",
    "crates/barme-core",
    "crates/barme-pipeline",
    "crates/barme-render-s3o",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.90"
license = "GPL-2.0-or-later"
repository = "https://github.com/teague/BARMapEditor"

[workspace.dependencies]
# UI / graphics
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }
egui = "0.33"
wgpu = "27"
bytemuck = { version = "1.24", features = ["derive"] }
glam = { version = "0.30", features = ["bytemuck"] }

# Logging / errors
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization / files
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
image = { version = "0.25", default-features = false, features = ["png", "bmp", "tga"] }
# BC1/BC3/BC5 DDS decode for feature decal sprites (Sprint 29 / ADR-046).
# Phase A only exercises the TGA path; bcdec_rs is added early so Phase B
# (S3O parsing, Sprint 29b) inherits a working decoder. Pure Rust, no
# platform branches.
bcdec_rs = "0.4"
rfd = "0.15"

# Subprocess plumbing
which = "8"

# Math-function terrain generator (procgen)
evalexpr = "13"

# DNTS bake cache key (sha256 over inputs + BakeOptions)
sha2 = "0.10"

# Mask byte-vec TOML encoding (D8 / Sprint 15). Switching to sidecar
# PNGs lands in Sprint 16 (D9) once the tiled-COW model arrives.
base64 = "0.22"

# Per-row parallel layer bake (D8 / Sprint 15).
rayon = "1.10"

# Cross-platform user directories (BAR maps-dir lookup; see ADR-015)
directories = "6"

# Scratch dirs (build_and_install uses a per-call tempdir)
tempfile = "3"

# Sprint 20: disk-free-space probe for the PrepareStaging warning.
fs2 = "0.4"

# Bench harness (Sprint 33 / T6). Promotes the Sprint-1 / Sprint-24
# example benches into criterion benches so CI can track the
# NFR-Performance budgets and fail a PR on a >1.5x regression.
criterion = { version = "0.5", features = ["html_reports"] }

# Workspace-internal
barme-core = { path = "crates/barme-core" }
barme-pipeline = { path = "crates/barme-pipeline" }
barme-render-s3o = { path = "crates/barme-render-s3o" }

[profile.dev]
opt-level = 1            # debug builds are too slow with image/wgpu at opt-level 0

[profile.dev.package."*"]
opt-level = 3            # always optimise deps so iteration is fast

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
