[package]
name = "barme-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Beyond All Reason map editor — desktop application"

[[bin]]
name = "barme"
path = "src/main.rs"

[dependencies]
barme-core.workspace = true
barme-pipeline.workspace = true
eframe.workspace = true
egui.workspace = true
wgpu.workspace = true
bytemuck.workspace = true
glam.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rfd.workspace = true
image.workspace = true
directories.workspace = true
tempfile.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
fs2.workspace = true
