[package]
name = "barme-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "BAR map editor — project model, heightmap, undo, mapinfo"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
glam.workspace = true
bytemuck.workspace = true
tracing.workspace = true
image.workspace = true
evalexpr.workspace = true
base64.workspace = true
rayon.workspace = true

[dev-dependencies]
tempfile = "3"

[[example]]
name = "gen-fixture"
path = "examples/gen_fixture.rs"

[[example]]
name = "bench-brushes"
path = "examples/bench_brushes.rs"
