[package]
name = "barme-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "BAR map editor — project model, heightmap, undo, mapinfo"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
glam.workspace = true
bytemuck.workspace = true
tracing.workspace = true
image.workspace = true
evalexpr.workspace = true
base64.workspace = true
rayon.workspace = true

[dev-dependencies]
tempfile = "3"

# Sprint 23 (T1) — Linux-only RSS / VmPeak snapshots. Gated to Linux
# so Windows / macOS builds stay clean. Used by
# `crates/barme-core/src/rss.rs` for both the `Tool::PaintLayer` entry
# OOM regression test (Linux-only) and the `trace!`-on-paint-session
# RSS hooks in the app.
[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.18", default-features = false }

[[example]]
name = "gen-fixture"
path = "examples/gen_fixture.rs"

[[example]]
name = "bench-brushes"
path = "examples/bench_brushes.rs"

[[example]]
name = "bench-procgen"
path = "examples/bench_procgen.rs"
