[package]
name = "barme-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "BAR map editor — PyMapConv subprocess driver, mapinfo emit, .sd7 packaging"

[dependencies]
barme-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
image.workspace = true
which.workspace = true

[dev-dependencies]
tempfile.workspace = true
tracing-subscriber = { workspace = true }
which.workspace = true
anyhow.workspace = true
