[package]
name = "barme-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "BAR map editor — PyMapConv subprocess driver, mapinfo emit, .sd7 packaging"

[dependencies]
barme-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
image.workspace = true
which.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
# Sprint 24 (T2): parallel DNTS bake across DNTS-bound layers via a
# scoped rayon pool. See `crates/barme-pipeline/src/splat_pipeline.rs`
# and `docs/research/multithreading/PROPOSAL.md` §3.
rayon.workspace = true
# Sprint 24 (T2): atomic tempfile+rename in the DNTS bake cache so two
# parallel bakes on the same content-addressed cache key never leave a
# half-written `.dds` behind. See `crates/barme-pipeline/src/dnts.rs`.
tempfile.workspace = true

[dev-dependencies]
tracing-subscriber = { workspace = true }
which.workspace = true
anyhow.workspace = true

[lints]
workspace = true
