[package]
name = "barme-render-s3o"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "BAR map editor — Recoil S3O model parser + offscreen thumbnail render pass (Sprint 29b)"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytemuck.workspace = true
glam.workspace = true
# PNG encode + decode for the content-addressed thumbnail cache.
# Phase A already enabled the PNG feature workspace-wide via the
# barme-app and barme-core uses; this crate inherits.
image.workspace = true
# sha256 for the cache key (sha256(s3o_bytes)).
sha2.workspace = true
# Atomic cache writes (write-to-temp + rename) so two parallel
# bakes on the same key never leave a half-written file behind.
tempfile.workspace = true

[lints]
workspace = true
